--- a/public/css/site.css
+++ b/public/css/site.css
@@ -21,8 +21,34 @@ input[type="button"] {
     margin-right: 15px;
 }
 
-.naviagation ul li {
-    float:left;
+
+.app {
+    width: 400px;
+    min-height: 200px;
+    margin: auto;
+    padding: 30px;
+    background: #FFFFFF;
+    box-shadow: 0 8px 16px 0 rgba(190,190,202,0.50);
+    border-radius: 8px;
+}
+.gr__guarded-reef-68414_herokuapp_com {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #F2F2F2;
+
+}
+
+.naviagation {
+
+    width: 400px;
+    min-height: 200px;
+    margin: auto;
+    padding-bottom: 10px;
+    background: #FFFFFF;
+    box-shadow: 0 8px 16px 0 rgba(190,190,202,0.50);
+    border-radius: 8px;
+
 }
 
 .form {
